# birdy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  compose.override.yaml  compose.yaml  docker-compose.yaml  justfile  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  turbo.json
docs/bruno/collections/collector/: bruno.json  test.bru
services/analyzer/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
services/analyzer/birdy_analyzer/: analyzer.py  config.py  run.py
services/analyzer/birdy_analyzer/data/: analyzer.py  detection.py  location.py  recording.py
services/analyzer/birdy_analyzer/grpc/: server.py  service.py  servicer.py
services/analyzer/birdy_analyzer/kafka/: consumer.py  consumers.py  producer.py  service.py
services/analyzer/birdy_analyzer/mqtt/: service.py
services/analyzer/src/: consumer.py  main.py  service.py  subscriber.py
services/collector/: Dockerfile  README.md  package.json
services/collector/src/: config.ts  main.ts
services/collector/src/initializers/: connect.ts  fastify.ts  prisma.ts
services/collector/src/services/kafka/: index.ts
services/collector/src/services/mqtt/: index.ts
services/collector/src/services/storage/: index.ts
services/recorder/: .config.json.example  Dockerfile  README.md  package.json
services/recorder/src/: config.ts  main.ts  worker.ts
services/recorder/src/services/audio/: index.ts
services/recorder/src/types/: index.ts
services/recorder/src/utils/: config.ts  event-emitter.ts  index.ts  logger.ts
(+3 files in other folders)
